# skillmapper

./: .env.example  .gitignore  README.md  config.py  main.py  profile-skills.md  pyproject.toml
api/: client.py  decorators.py  enums.py
api/schemas/: common.py  resume.py  vacancy.py
config/: conf.py
oauth/: browser.py  clients.py  protocols.py  service.py  token_store.py
