[project]
name = "skillmapper"
version = "0.1.0"
description = "HH.ru API client for personal skill mapping and vacancy recommendations."
requires-python = ">=3.12"

dependencies = [
    "blinker>=1.9.0",
    "flask>=3.1.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets]
wheel = { include = ["api", "config", "oauth", "main.py", "LICENSE.md", "README.md"] }

[tool.hatch.build]
include = ["api", "config", "oauth", "main.py", "LICENSE.md", "README.md"]
